JSON: When clearing duplicate object entries, also clear containers

Previously, if you had multiple entries with the same name in an object,
and some of them were again objects or arrays, parsing the JSON document
would leak memory.

Also, we use std::stable_sort instead of std::sort now, so that we don't
accidentally randomize the order of elements with equal keys.

[ChangeLog][QtCore][JSON] A memory leak in the JSON parser when reading
objects with duplicate keys was fixed.

Fixes: QTBUG-99799
Change-Id: Ic2065f2e490c2d3506a356745542148ad9c24262
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 1b4a5ecc91c87ffe7869d233c00a37d1b5b9cb13)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>